--- a/configure.in
+++ b/configure.in
@@ -10,7 +10,7 @@ AC_PROG_CC
 AM_PROG_CC_STDC
 AC_HEADER_STDC
 
-pkg_modules="gtk+-2.0 >= 2.0.0, libglade-2.0 >= 2.0.0"
+pkg_modules="gtk+-2.0 >= 2.4.0, libglade-2.0 >= 2.4.0"
 PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
 AC_SUBST(PACKAGE_CFLAGS)
 AC_SUBST(PACKAGE_LIBS)
@@ -27,5 +27,7 @@ AC_OUTPUT([
 Makefile
 src/Makefile
 po/Makefile.in
+data/Makefile
+data/glade/Makefile
 ])
 
