fixup glade more

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,11 @@
 ## Process this file with automake to produce Makefile.in
 
+gladedir = $(datadir)/fatfind/glade
+
 INCLUDES = \
 	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
 	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
+	-DFATFIND_GLADEDIR=\""$(gladedir)"\" \
 	@PACKAGE_CFLAGS@
 
 bin_PROGRAMS = fatfind
