--- a/configure.in
+++ b/configure.in
@@ -11,7 +11,8 @@ AM_PROG_CC_STDC
 AC_HEADER_STDC
 
 pkg_modules="gtk+-2.0 >= 2.4.0 \
-	libglade-2.0 >= 2.4.0"
+	libglade-2.0 >= 2.4.0 \
+	opencv >= 0.9.7"
 PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
 AC_SUBST(PACKAGE_CFLAGS)
 AC_SUBST(PACKAGE_LIBS)
