--- a/configure.in
+++ b/configure.in
@@ -10,9 +10,8 @@ AC_PROG_CC
 AM_PROG_CC_STDC
 AC_HEADER_STDC
 
-pkg_modules="gtk+-2.0 >= 2.4.0 \
-	libglade-2.0 >= 2.4.0 \
-	opencv >= 0.9.7"
+pkg_modules="gtk+-2.0 >= 2.6.0 \
+	libglade-2.0 >= 2.5.0 "
 PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
 AC_SUBST(PACKAGE_CFLAGS)
 AC_SUBST(PACKAGE_LIBS)
