--- a/config.h.in
+++ b/config.h.in
@@ -21,6 +21,33 @@
 /* Define if your <locale.h> file defines LC_MESSAGES. */
 #undef HAVE_LC_MESSAGES
 
+/* Define to 1 if you have the `dconfig' library (-ldconfig). */
+#undef HAVE_LIBDCONFIG
+
+/* Define to 1 if you have the `dctl' library (-ldctl). */
+#undef HAVE_LIBDCTL
+
+/* Define to 1 if you have the `filter' library (-lfilter). */
+#undef HAVE_LIBFILTER
+
+/* Define to 1 if you have the `filterexec' library (-lfilterexec). */
+#undef HAVE_LIBFILTEREXEC
+
+/* Define to 1 if you have the `hstub' library (-lhstub). */
+#undef HAVE_LIBHSTUB
+
+/* Define to 1 if you have the `log' library (-llog). */
+#undef HAVE_LIBLOG
+
+/* Define to 1 if you have the `odisk' library (-lodisk). */
+#undef HAVE_LIBODISK
+
+/* Define to 1 if you have the `searchlet' library (-lsearchlet). */
+#undef HAVE_LIBSEARCHLET
+
+/* Define to 1 if you have the `tools' library (-ltools). */
+#undef HAVE_LIBTOOLS
+
 /* Define to 1 if you have the <locale.h> header file. */
 #undef HAVE_LOCALE_H
 
