--- a/configure.in
+++ b/configure.in
@@ -21,6 +21,19 @@ GETTEXT_PACKAGE=fatfind
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])
 
+
+# XXX circular dependencies
+AC_SUBST(LIBS, "-lpthread -lm -lsearchlet -lfilterexec -lfilter -llog -lodisk -ltools -lhstub -ldctl -ldconfig -llog -lssl")
+
+
+# XXX should use pkg-config
+AC_SUBST(LDFLAGS, "-L/opt/diamond/lib -L/usr/local/diamond/lib")
+AC_SUBST(CPPFLAGS, "-I/opt/diamond/include -I/usr/local/diamond/include")
+
+# XXX should work on more than 1 arch
+AC_SUBST(CFLAGS, "-m32")
+
+
 # XXX replace mains with real functions
 AC_CHECK_LIB([dconfig], [main], ,
         [AC_MSG_ERROR(Missing libdconfig)])
