--- a/configure.in
+++ b/configure.in
@@ -12,11 +12,11 @@ AC_PROG_CXX
 AC_HEADER_STDC
 
 pkg_modules="gtk+-2.0 >= 2.8.0 \
-	libglade-2.0 >= 2.5.1 \
-        opencv >= 0.9.7"
-PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
-AC_SUBST(PACKAGE_CFLAGS)
-AC_SUBST(PACKAGE_LIBS)
+	libglade-2.0 >= 2.5.1"
+ 
+PKG_CHECK_MODULES(glade, [$pkg_modules])
+AC_SUBST(glade_CFLAGS)
+AC_SUBST(glade_LIBS)
 
 GETTEXT_PACKAGE=fatfind
 AC_SUBST(GETTEXT_PACKAGE)
