--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,7 +18,7 @@ fatfind_SOURCES = \
 	calibrate.c calibrate.h \
 	define.c define.h \
 	investigate.c investigate.h \
-	image.c \
+	util.c util.h \
 	circles4.cpp circles4.h \
 	diamond_interface.c diamond_interface.h
 
