--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,8 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(fatfind, 0.1)
+AC_INIT(FatFind, 0.1)
+AC_CONFIG_SRCDIR(src)
+AM_INIT_AUTOMAKE(foreign)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
@@ -17,10 +18,6 @@ pkg_modules="gtk+-2.0 >= 2.8.0 \
 PKG_CHECK_MODULES(glade, [$pkg_modules])
 AC_SUBST(glade_CFLAGS)
 AC_SUBST(glade_LIBS)
-
-GETTEXT_PACKAGE=fatfind
-AC_SUBST(GETTEXT_PACKAGE)
-AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])
 
 
 # XXX circular dependencies
@@ -57,14 +54,9 @@ AC_CHECK_LIB([tools], [main], ,
 
 
 
-dnl Add the languages which your application supports here.
-ALL_LINGUAS=""
-AM_GLIB_GNU_GETTEXT
-
 AC_OUTPUT([
 Makefile
 src/Makefile
-po/Makefile.in
 data/Makefile
 data/glade/Makefile
 data/filter/Makefile
