--- a/configure.in
+++ b/configure.in
@@ -19,6 +19,10 @@ PKG_CHECK_MODULES(glade, [$pkg_modules])
 AC_SUBST(glade_CFLAGS)
 AC_SUBST(glade_LIBS)
 
+GETTEXT_PACKAGE=fatfind
+AC_SUBST(GETTEXT_PACKAGE)
+AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])
+
 
 # XXX circular dependencies
 AC_SUBST(LIBS, "`lti-config nogtk --libs` -lpthread -lm -lsearchlet -lfilterexec -lfilter -llog -lodisk -ltools -lhstub -ldctl -ldconfig -llog -lssl")
@@ -53,6 +57,10 @@ AC_CHECK_LIB([tools], [main], ,
         [AC_MSG_ERROR(Missing libtools)])
 
 
+
+dnl Add the languages which your application supports here.
+ALL_LINGUAS=""
+AM_GLIB_GNU_GETTEXT
 
 AC_OUTPUT([
 Makefile
