--- a/data/filter/Makefile.am
+++ b/data/filter/Makefile.am
@@ -1,4 +1,6 @@
-filter_DATA = rgb-filter.txt fil_circle.so fil_rgb.a
+filter_DATA = rgb-filter.txt
+nodist_filter_DATA = fil_circle.so fil_rgb.a
+
 filterdir = $(datadir)/fatfind/filter
 
 EXTRA_DIST = $(filter_DATA)
