Remove fil_rgb.so from Makefile.am

--- a/data/filter/Makefile.am
+++ b/data/filter/Makefile.am
@@ -1,5 +1,5 @@
 filter_DATA = rgb-filter.txt
-nodist_filter_DATA = fil_circle.so fil_rgb.so
+nodist_filter_DATA = fil_circle.so
 
 filterdir = $(datadir)/fatfind/filter
 
