--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,14 +3,16 @@
 gladedir = $(datadir)/fatfind/glade
 filterdir = $(datadir)/fatfind/filter
 
-INCLUDES = \
+fatfind_CPPFLAGS = \
 	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
 	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
 	-DFATFIND_GLADEDIR=\""$(gladedir)"\" \
 	-DFATFIND_FILTERDIR=\""$(filterdir)"\" \
-	@OPENDIAMOND_CFLAGS@ @GLADE_CFLAGS@
+	@OPENDIAMOND_CFLAGS@ @GLADE_CFLAGS@ @LTILIB_CFLAGS@
 
-bin_PROGRAMS = fatfind fatfind-runner
+fatfind_runner_CPPFLAGS = @GLIB_CFLAGS@ @LTILIB_CFLAGS@
+
+bin_PROGRAMS = fatfind-runner
 
 fatfind_SOURCES = \
 	main.c fatfind.h \
@@ -28,6 +30,6 @@ fatfind_runner_SOURCES = circles4.cpp circles4.h fatfind-runner.cpp util.c
 
 fatfind_LDADD = @OPENDIAMOND_LIBS@ @GLADE_LIBS@
 
-fatfind_runner_LDADD = @OPENDIAMOND_LIBS@ @GLIB_LIBS@
+fatfind_runner_LDADD = @GLIB_LIBS@
 
 fatfind_LDFLAGS = -export-dynamic
