Rework fatfind as fatfind-runner

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(fatfind, [1.0.10], [diamond@cs.cmu.edu])
+AC_INIT(fatfind-runner, [1.1.0], [diamond@cs.cmu.edu])
 AC_PREREQ([2.59])
 AC_CONFIG_SRCDIR([src])
 AM_INIT_AUTOMAKE([foreign 1.9])
@@ -12,38 +12,16 @@ AM_PROG_CC_STDC
 AC_PROG_CXX
 AC_HEADER_STDC
 
-pkg_modules="gtk+-2.0 >= 2.8.0 \
-	libglade-2.0 >= 2.5.1"
-
-PKG_CHECK_MODULES(GLADE, [$pkg_modules])
-AC_SUBST(GLADE_CFLAGS)
-AC_SUBST(GLADE_LIBS)
-
 PKG_CHECK_MODULES(GLIB, [glib-2.0])
 AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
 
-PKG_CHECK_MODULES(OPENDIAMOND, [opendiamond])
-AC_SUBST(OPENDIAMOND_CFLAGS)
-AC_SUBST(OPENDIAMOND_LIBS)
-
 AC_SEARCH_LIBS([sqrt], [m],, AC_MSG_FAILURE([cannot find math library]))
-AC_SEARCH_LIBS([pthread_create],
-	[pthread],, AC_MSG_FAILURE([cannot find pthread_create function]))
 
-AC_SUBST(LIBS, "`/opt/diamond-filter-kit/bin/lti-config nogtk --libs`")
-
-
-AC_SUBST(LTILIB_CFLAGS, "-Werror-implicit-function-declaration `/opt/diamond-filter-kit/bin/lti-config nogtk --cxxflags`")
-
-# XXX should work on more than 1 arch
-AC_SUBST(AM_CFLAGS, "-m32")
-
+AC_SUBST(LTILIB_CFLAGS, "$(/opt/diamond-filter-kit/bin/lti-config nogtk --cxxflags)")
+AC_SUBST(LTILIB_LIBS, "$(/opt/diamond-filter-kit/bin/lti-config nogtk --libs)")
 
 AC_OUTPUT([
 Makefile
 src/Makefile
-data/Makefile
-data/glade/Makefile
-data/filter/Makefile
 ])
