--- a/configure.ac
+++ b/configure.ac
@@ -15,6 +15,9 @@ AC_HEADER_STDC
 PKG_CHECK_MODULES(GLIB, [glib-2.0])
 AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
+PKG_CHECK_MODULES(OPENDIAMOND, [opendiamond])
+AC_SUBST(OPENDIAMOND_CFLAGS)
+AC_SUBST(OPENDIAMOND_LIBS)
 
 AC_SEARCH_LIBS([sqrt], [m],, AC_MSG_FAILURE([cannot find math library]))
 
