Don't try to build 32-bit library
Also sort objects before libraries for link command.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,4 @@
 
 SUBDIRS = src
 
-EXTRA_DIST = LICENSE CREDITS
-
-# diamond-filter-kit is only built for 32-bit
-DISTCHECK_CONFIGURE_FLAGS = CPPFLAGS=-m32 LDFLAGS=-m32
+EXTRA_DIST = LICENSE CREDITS README.md ltilib.patch
